<resources>
    <string name="app_name">woofer</string>
    <string name="navSettings">Settings</string>
    <string name="navBackToMenu">Main Menu</string>
    <string name="navQuit">Exit</string>
    <string name="action_settings">תפריט</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="nav_titles">
        <item>Main Menu</item>
        <item>Camera</item>
        <item>Meals Scheduling</item>
        <item>Dog's Analytics</item>
        <item>Settings</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meal">click here to add meal</string>
    <string name="delete_meal_tooltip">Click here to delete this meal</string>
    <string name="amount_g">Amount (g)</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="time">time</string>
    <string name="time_pick">Time</string>
    <string name="date">Date</string>
    <string name="new_meal">New Meal</string>

</resources>
